Fixed Icons + Align Text & Icons

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -87,8 +87,9 @@
     display: flexbox;
     width: 75%;
     border: 1.6px solid #eef2f548;
-    height: 300px;
+    height: 360px;
     border-radius: 10px;
+    flex-direction: row;
  }
 
  .aboutText {
@@ -98,7 +99,9 @@
     text-align: center;
     font-style: oblique;
     position: relative;
-    top: 225px;
+    top: 237px;
+    right: 290px;
+    padding: 5px;
  }
 
  .aboutText1 {
@@ -108,7 +111,9 @@
     text-align: center;
     font-style: oblique;
     position: relative;
-    top: 225px;
+    top: 237px;
+    right: 175px;
+    padding: 5px;
  }
 
  .aboutText2 {
@@ -118,7 +123,9 @@
     text-align: center;
     font-style: oblique;
     position: relative;
-    top: 225px;
+    top: 237px;
+    right: 47px;
+    padding: 5px;
  }
 
  .iconContainer {
@@ -126,5 +133,32 @@
     display: flex;
     flex-direction: row;
     position: relative;
-    top: 225px;
+    top: 95px;
+ }
+
+ .pirate {
+   margin: 0 auto;
+   display: flex;
+   width: 110px;
+   height: 110px;
+   left: 105px;
+   position: relative;
+ }
+
+ .merchant {
+   margin: 0 auto;
+   display: flex;
+   height: 110px;
+   width: 110px;
+   left: 394px;
+   position: relative;
+ }
+
+ .explorer {
+   margin: 0 auto;
+   display: flex;
+   height: 110px;
+   width: 110px;
+   left: 719px;
+   position: relative;
  }
